# backend/src/models/db/UserCard.ts
@@ -1,15 +1,18 @@
 import BaseModelCreatedUpdated from '../../models/db/BaseModelCreatedUpdated';
 import {mergeDeep} from '../../util/merge';
-import type {JSONSchema} from 'objection';
+import {JSONSchema, Model, RelationMappings, RelationMappingsThunk} from 'objection';
 import {UUID} from 'node:crypto';
+import UserCardLabel from './UserCardLabel';
 
 export default class UserCard extends BaseModelCreatedUpdated {
   cardUid!: UUID;
+  labels!: UserCardLabel[];
 
-  static new(id: UUID, cardUid: UUID, createdBy: UUID): UserCard {
+  static new(id: UUID, cardUid: UUID, labels: UserCardLabel[], createdBy: UUID): UserCard {
     const ret = new UserCard();
     ret.id = id;
     ret.cardUid = cardUid;
+    ret.labels = labels;
     ret.createdBy = createdBy;
     ret.updatedBy = createdBy;
     return ret;
@@ -19,6 +22,19 @@ export default class UserCard extends BaseModelCreatedUpdated {
     return 'usercards';
   }
 
+  static override get relationMappings(): RelationMappings | RelationMappingsThunk {
+    return {
+      labels: {
+        relation: Model.HasManyRelation,
+        modelClass: UserCardLabel,
+        join: {
+          from: this.tableName + '.id',
+          to: UserCardLabel.tableName + '.userCardId',
+        },
+      },
+    };
+  }
+
   static override get jsonSchemaWithReferences(): JSONSchema {
     return mergeDeep({}, super.jsonSchemaWithReferences, {
       $id: 'UserCard',
@@ -26,6 +42,7 @@ export default class UserCard extends BaseModelCreatedUpdated {
 
       properties: {
         cardUid: {type: 'string', format: 'uuid'},
+        labels: {type: 'array', items: {$ref: '#/definitions/UserCardLabel'}},
       },
     });
   }
