# swagger.json
@@ -86,6 +86,31 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"UserCardLabelVmV1": {
+				"properties": {
+					"id": {
+						"$ref": "#/components/schemas/UUID"
+					},
+					"labelId": {
+						"$ref": "#/components/schemas/UUID"
+					},
+					"userCardId": {
+						"$ref": "#/components/schemas/UUID"
+					},
+					"value": {
+						"type": "string",
+						"nullable": true,
+						"maxLength": 255
+					}
+				},
+				"required": [
+					"id",
+					"labelId",
+					"userCardId"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"UserCardVmV1": {
 				"properties": {
 					"id": {
@@ -107,6 +132,12 @@
 					},
 					"cardUid": {
 						"$ref": "#/components/schemas/UUID"
+					},
+					"labels": {
+						"items": {
+							"$ref": "#/components/schemas/UserCardLabelVmV1"
+						},
+						"type": "array"
 					}
 				},
 				"required": [
@@ -115,7 +146,8 @@
 					"createdBy",
 					"updatedAt",
 					"updatedBy",
-					"cardUid"
+					"cardUid",
+					"labels"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -691,6 +723,9 @@
 								}
 							}
 						}
+					},
+					"400": {
+						"description": "BadRequest"
 					},
 					"404": {
 						"description": "Not Found"
